# VoidEngine

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Level.cpp  LinuxBuild.sh  Project Coati Architecture Diagram.xml  Project-Coati.sln  Project-Coati.vcxproj  Project-Coati.vcxproj.filters  README.md  SuperVoid.sln  azure-pipelines.yml
Dependencies/: CMakeLists.txt
Dependencies/GLAD/include/glad/: glad.h
Dependencies/GLAD/src/: glad.c
Dependencies/GLFW/: glfw3.lib
Dependencies/LUA/: LUA.vcxproj  LUA.vcxproj.filters
Dependencies/nlohmann/detail/conversions/: to_chars.hpp
EngineCore/: AABBCollider.cpp  AABBCollider.h  Action.cpp  Action.h  AudioManager.cpp  AudioManager.h  AxisInput.cpp  AxisInput.h  AxisInputAction.cpp  AxisInputAction.h  AxisInputEvent.h  CMakeLists.txt  CameraComponent.cpp  CameraComponent.h  Collider.cpp  Collider.h  ColliderComponent.cpp  ColliderComponent.h  Component.cpp  Component.h  ComponentFactory.cpp  ComponentFactory.h  ConfigManager.cpp  ConfigManager.h  Configurable.cpp  Configurable.h  Configuration.cpp  Configuration.h  Console.cpp  Console.h  ControlLayout.cpp  ControlLayout.h  DefaultEntity.cpp  DefaultEntity.h  DefaultPlayerEntity.cpp  DefaultPlayerEntity.h  Engine.cpp  Engine.h  EngineCore.vcxproj  EngineCore.vcxproj.filters  (+167 more)
EngineMath/: CMakeLists.txt  EngineMath.vcxproj  EngineMath.vcxproj.filters  MathConstants.h  Quaternion.cpp  Quaternion.h  Rotator.cpp  Rotator.h  Vector.cpp  Vector.h  Vector2D.cpp  Vector2D.h  Vector3D.cpp  Vector3D.h
EngineTestSuite/: CMakeLists.txt  ConfigurableTests.cpp  ConfigurationManagerTests.cpp  ConsoleTests.cpp  EngineTestSuite.vcxproj  EngineTestSuite.vcxproj.filters  EngineUtilitiesTests.cpp  EventTableTests.cpp  InputAxisTests.cpp  InputDefinitionTests.cpp  InputManagerTests.cpp  KeyBindingsTests.cpp  MessageBusTests.cpp  ResourceManagerTests.cpp  RotatorTests.cpp  TestActionBindings.cpp  TestCollisions.cpp  TestConfigManager.cpp  TestConfigurable.cpp  TestConfigurationResource.cpp  TestConsole.cpp  TestEngineUtilities.cpp  TestEntities.cpp  TestEventBus.cpp  TestEventTable.cpp  TestFactories.cpp  TestInputAxis.cpp  TestInputDefinitions.cpp  TestInputManager.cpp  TestJumpTable2D.cpp  TestKeyBindings.cpp  TestMessageBus.cpp  TestName.cpp  TestQuaternions.cpp  TestResourceManager.cpp  TestRotators.cpp  TestTable.cpp  TestThreadPool.cpp  TestWindowManager.cpp  TestingUtilities.h  (+3 more)
SuperVoid/: BouncingCube.cpp  BouncingCube.h  CMakeLists.txt  Core.cpp  CubeEntity.cpp  CubeEntity.h  MainMenu.cpp  MainMenu.h  PlayerShip.cpp  PlayerShip.h  SphereEntity.cpp  SphereEntity.h  SuperVoid.vcxproj  SuperVoid.vcxproj.filters
SuperVoid/Assets/Levels/: AsteroidField.json  LightTest.json
SuperVoid/Assets/Models/Ship/: PlayerShip.blend  Reference.psd
SuperVoid/Assets/Models/Sphere/: Sphere.blend
SuperVoid/Assets/Models/StandardAxes/: StandardAxes.mtl  untitled.blend
SuperVoid/Assets/Models/Teapot/: UtahTeapot.mtl
SuperVoid/Assets/Testing/Entities/: AABBCollisionTestEntity.json  CollisionTestEntity.json
SuperVoid/Components/: ShipCamera.cpp  ShipCamera.h
SuperVoid/Entities/: Asteroid.cpp  Asteroid.h  AsteroidEmitter.cpp  AsteroidEmitter.h  BouncingCube.cpp  BouncingCube.h  PlayerShip.cpp  PlayerShip.h
Tests/: CMakeLists.txt
Tests/EngineCoreTests/: CMakeLists.txt
Tests/EngineCoreTests/EventSystem/: EventBus_test.cpp  EventSystem_test.cpp
Tests/EngineCoreTests/Gameplay/: Entity_test.cpp  Scene_test.cpp  Transform_test.cpp
Tests/EngineCoreTests/Input/: ActionBinding_test.cpp  InputDefinition_test.cpp  InputManager_test.cpp
Tests/EngineCoreTests/Physics/: ColliderComponent_test.cpp
Tests/EngineCoreTests/Utils/: Configurable_test.cpp  Configuration_test.cpp  Factory_test.cpp  Name_test.cpp  Table_test.cpp  ThreadPool_test.cpp
Tests/EngineCoreTests/Window/: Window_test.cpp
Tests/EngineMathTests/: CMakeLists.txt  Quaternions_test.cpp  Rotators_test.cpp  Vector_test.cpp
Tests/EngineUtilsTests/: CMakeLists.txt  Configurable_test.cpp  Configuration_test.cpp  Factory_test.cpp  GenericUtilities_test.cpp  Name_test.cpp  ResourceManager_test.cpp  Table_test.cpp  ThreadPool_test.cpp  ThreadSafeQueue_test.cpp
Tools/VoidReflect/: CMakeLists.txt
Tools/VoidReflect/source/: main.cpp
VoidEngine/: CMakeLists.txt
VoidEngine/Assets/Default/Shaders/: default.frag  default.vert
VoidEngine/Assets/StarterAssets/Levels/: DemoLevel.json
VoidEngine/Config/: InputConfig.json
VoidEngine/Config/Controls/: DefaultControls.json  MenuControls.json
VoidEngine/Config/testing/: ConfigurableTest1.json
VoidEngine/EngineCore/: CMakeLists.txt
VoidEngine/EngineCore/include/core/: Game.h  Level.h  Scene.h  SceneLoader.h  VEObject.h  Window.h
VoidEngine/EngineCore/src/: Game.cpp  Level.cpp  Main.cpp  Scene.cpp  SceneLoader.cpp  VEObject.cpp  Window.cpp
VoidEngine/EngineCore/src/audio/: AudioManager.cpp
VoidEngine/EngineCore/src/eventSystem/: EventBus.cpp  EventDispatcher.cpp
VoidEngine/EngineCore/src/event_system/: Event.cpp  EventBus.cpp  EventBusNode.cpp  EventDispatcher.cpp  EventSystem.cpp
VoidEngine/EngineCore/src/gameplayFramework/: EntityData.cpp
VoidEngine/EngineCore/src/input/: ControlLayout.cpp  (+4 more)
VoidEngine/EngineMath/: CMakeLists.txt
VoidEngine/EngineMath/src/: Matrix.cpp  Quaternion.cpp  Rotator.cpp  Vector.cpp
VoidEngine/EngineUtils/: CMakeLists.txt
VoidEngine/EngineUtils/src/: EngineConfig.cpp  Logger.cpp  TimeUtils.cpp
VoidEngine/Tests/: CMakeLists.txt
VoidEngine/Tests/EngineCoreTests/: CMakeLists.txt
VoidEngine/Tests/EngineMathTests/: CMakeLists.txt
VoidEngine/Tests/EngineUtilsTests/: CMakeLists.txt  Configurable_test.cpp  Configuration_test.cpp  RTTI_test.cpp  RTTR_Test.cpp  ResourceManager_test.cpp  ThreadSafeQueue_test.cpp
VoidEngine/docs/: 404.html  QuickStart.html
VoidEngine/include/core/: Scene.h  VoidEnginePCH.h
VoidEngine/src/: Game.cpp
VoidEngine/src/gameplay_framework/: Entity.cpp  EntityData.cpp
VoidEngine/src/input/: InputManager.cpp
VoidEngine/src/platform/: Platform.cpp
VoidEngine/src/rendering/: BufferLayout.cpp  RenderCommand.cpp
(+352 files in other folders)
